FIX: delete a device
